@@ -57,6 +57,7 @@
     - Removes "edit preamble" from toolbar
     - Fix #250: No hard line breaks after 70 chars in serialized JabRef meta data
     - Update supported LookAndFeels
+    - Fix sourceforge bug 1296: External links in the help open in the standard browser
 [dev_2.11]
     - Backports from 2.80: Fix bug #194: JabRef starts again on Win XP and Win Vista
     - Backports from 2.80: Fixes #103: JDialog for auto set links is openend and closed correctly
